<resources>
    <string name="app_name">Bhajan Viewer</string>
    <string name="APP_KEY">9vftylnjmlrzgwz</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="menus_array">
        
        <item>Notification</item>
        <item>History</item>
        <item>Contact Us</item>
        <item>About Us</item>
        <item>Rate Us</item>
        <item>Logout</item>
    </string-array>
    <string name="bhajan_text"> Owaloo aaratee mazhaa Sadgurunaathaa – maazhaa Sainaatha
Paanchaahee tatwaanche deep laawilaa aataan
Nirgunaachee sthitee kaisee aakaaraa aalee – Baba aakaaraa aalee
Sarvaa ghatee bharooni vuralee Sayee Maawoolee Owaloo aaratee….
RajaTamaSathwa tighe maayaa prasawalee – Mazyawara maayaa prasawalee
Mayecheeye potee kaisee maayaa udbhavalee Owaloo aaratee….
SaptaSaagaree kaisa khel maandeelaa – Baba khel maandeelaa
Khelooniyaa khel awagha visthaar kelaa Owaloo aaratee….
Brahmaandeechee rachanaa keisee daakhavilee dolaa – Baba daakhavilee dolaa
Tuka hmane maazhaa Swaamee kripaaloo bholaa Owaloo aaratee….</string>
     <string name="shej_aarathi_text">
        SHRI SATCHITAANAND SADGURU SAINAATH MAHARAAJ KI JAI
    </string>
    <string name="shej_aarathi_text_1">
        Owaloo aaratee mazhaa Sadgurunaathaa – maazhaa Sainaatha
Paanchaahee tatwaanche deep laawilaa aataan
Nirgunaachee sthitee kaisee aakaaraa aalee – Baba aakaaraa aalee
Sarvaa ghatee bharooni vuralee Sayee Maawoolee Owaloo aaratee….
RajaTamaSathwa tighe maayaa prasawalee – Mazyawara maayaa prasawalee
Mayecheeye potee kaisee maayaa udbhavalee Owaloo aaratee….
SaptaSaagaree kaisa khel maandeelaa – Baba khel maandeelaa
Khelooniyaa khel awagha visthaar kelaa Owaloo aaratee….
Brahmaandeechee rachanaa keisee daakhavilee dolaa – Baba daakhavilee dolaa
Tuka hmane maazhaa Swaamee kripaaloo bholaa Owaloo aaratee….
    </string>
    <string name="shej_aarathi_text_2">
        Lopale jnaana jagin – hita nenatee konee
Avataara Panduranga – nam ttevile jnanee
Aaratee Jnaanaraaja – mahaa kaivalya tejaa
Sevitee Saadhusanta – hmanu vedhalaa maazha Aaratee Jnaanaraaja.
Kanakachee tat kareen – Ubhyaa gopikaa naaree
Narada tumbaraho – samgaayan karee Aaratee Jnaanaraaja….
Pragata guhya bole – vishwa brahmachi kele
Rama Janardanee – payee masthak ttevile Aaratee Jnaanaraaja….
    </string>
    <string name="shej_aarathi_text_3">
        Aaratee Tukaaraamaa – Swamee Sadguru dhaamaa
Satchidaananda murtee – paaya dakhavi aamhaa Aaratee Tukaaraamaa
Raaghave Saagaraat – jaise paashaan taarile
Taise he tuko baache – abhang rakshile Aaratee Tukaaraamaa…
Tukitaa tulanesee – brahma tukasee aale
Hmanoni raamesware – charanee mastak ttevile Aaratee Tukaaraamaa…
    </string>
    <string name="madhyana_aarathi_text">
        SHRI SATCHITAANAND SADGURU SAINAATH MAHARAAJ KI JAI
    </string>
    <string name="madhyana_aarathi_text_1">
        Gheuniya Pancharati, Karu Babansi Arati,
Karu Saisi Arati, Karu Babansi Arati.
Utha utha ho bandhava. Ovalu ha rakhumadhava.
Sai Ramadhava. Ovalu ha rakhumadhava.
Karuniya Sthira Mana Pahu gambhira he dhyana
Sai ce he dhyana Pahu gambira he dhyana.
Krsnanatha datta-Sai. Jado citta tuje payi
Citta Deva Payi. Jado citta tuje payi.</string>
    <string name="madhyana_aarathi_text_2">
        Arati Sai Baba. Saukhyadatara Jiva. Caranarajatali
Dyava dasa visava, bhakta visava
Aarti…
Jaluniya ananga. Sasvarupi rahe danga Mumuksa janan
davi.
Nija dola Sriranga. Dola Sriranga
Aarti…
Jaya mani jaisa bhava. Tayataisa anubhava Davisi
dayaghana,
Aisi tuzi he mava, tuzi he mava.
Aarti…
Tumace nama dhyata. Hare Sansruthivyatha
Agadha Tava karani. Marga davisi anatha, davisi anatha.
Aarti…
Kaliyuga Avatara, Saguna Brahma sachara
Avatirna zalase Svami Datta Digambara, Datta
Digambara.
Aarti…
Athan Divasa Gurvari.Bhakta kariti vari.
Prabhupada Pahavaya Bhava Bhayanivari, bhayanivari.
Aarti…
Maza nijadravya theva, Thava carana-raja-seva
Magane heci aata, Tumhan devadideva, devadideva.
Aarti…
Ichita Dina chatak Nirmala toya nijasukha
Pajaven Madhava Ya Sambhala apuli bhaka, apuli bhaka.
Aarti…

    </string>
    <string name="madhyana_aarathi_text_3">
        Jaya Deva Jaya Deva Datta Avadhuta, O Sai Avadhuta
Joduni kara thava carani thevito mata.
Jaya Deva, Jaya Deva…
Avatarasi tu yeta dharmate glani nasti kannahi tu lavisi
nijabhajani
Davisi nana lila asankhya rupani, Harisi dinance tu
sankata dinarajani.
Jaya Deva, Jaya Deva…
Yavana-svarupi ekya darsana tva didhale, Samshaya
nirasuniya tadadvaita ghalavile
Gopichanda Manda tvaci uddharile, Momina vansi janmuni
lokan tariyale.
Jaya Deva, Jaya Deva…
Bheda na tattavi Hindu-yavananca kahi, Davayasi zala
punarapi naradehi
Pahasi premane tu Hindu yavanahi, Davisi atmatvane
vyapaka ha Sai.
Jaya Deva, Jaya Deva…
Deva Sainatha tvatpadanata vhave, Paramaya mohita
janamocana zani vhave
Tvakrpaya sakalance sankata nirasave, Desila tari de
tvadyasa Krsnane gave.
Jaya Deva, Jaya Deva…
    </string>
    <string name="madhyana_aarathi_text_4">
        Siradi Maze Pandharapura. Sai Baba Ramavare.
Baba Ramavara. Sai Ramavara.
Sudha bhakti chandrabhaga, Bhava Pundalika jaga.
Pundalika jaga, Bhava Pundalika jaga.
Yaho yaho avaghe jana, Kara Babansi vandana
Babansi vandana, Saisi vandana.
Ganu mhane Baba Sai. Dhava pava mazi ai.
Pava maze ai. Dhava pava mazi ai.
    </string>
    <string name="madhyana_aarathi_text_6">
        Hare Rama, Hare Rama, Rama Rama Hare Hare
Hare Krishna, Hare Krishna, Krishna Krishna Hare Hare
(3 times)

    </string>
    <string name="madhyana_aarathi_text_7">
        Hari Aum Yajnena yajnamayajanta Devastani dharmani
prathamanyasan Te ha nakam mahimanah sacanta yatra
Purve sadhya santi devah.
Aum Rajadhirajaya prasahyasahine namo vayam
vaisravanaya kurmahe. Sa me kamanka makamaya
mahyam Kamesvaro vaisravano dadhatu Kuberaya
Vaisravanaya Maharajaya Namaha
Aum Svasti. Sam Rajam Bhaujyam. Svarajyam Vairajyam
Para,eshtayam Rajyam Maharajyamadhipatya mayam
Samantaparyayi Syatsarvabhaumah Sarvayusya
Antadaparardhat prithivyai samudraparyanthaya ekaraliti.
Tadapyesa slok’bhi gito marutah parivestaro
Maruttasyavasangrhe, Aviksitasaya kamaprervisvedevah
sahasada iti.
    </string>
    <string name="madhyana_aarathi_text_8">

        Sri Narayana Vasudeva
Sachidananda Sadguru Sainatha
Maharaja Ki Jaya.
    </string>
    <string name="madhyana_aarathi_text_9">
        Anantha tula te kase re stavave
Anantha tula te kase re namve
Anantha mukhanca sine sesa gatan
Namaskara sastanga Sri Sainatha.
Smarave mani tvatpada nitya bhave
Urave tari bhaktisati svabhave
Tarave jaga taruni mayatata
Namaskara sastanga Sri Sainatha.
Vase jo sada davaya santa lila
Dise ajnya lokanpari jo jananla
Pari antari jnana kaivalyadata.
Namaskara sastanga Sri Sainatha.

        Bari ladhala janma ha manavaca
Nara sarthaka sadhanibhuta saca
Dharu Sai preme galaya ahanta
Namaskara sastanga Sri Sainatha.
Dharave kari sana alpajna bala
Karave amhan dhanya cumboni gala
Mukhi ghala preme khara grasa ata.
Namaskara sastanga Sri Sainatha.
Suradhika jyanchya pada vandhitati
Sukadika jyate samanatva deti
Prayagadi tirthe padi namrahota.
Namaskara sastanga Sri Sainatha.
Tuzya jya pada pahata gopabali
Sada rangali citsavarupi milali
Kari rasakrida save Krsnanatha.
Namaskara sastanga Sri Sainatha.
Tula magato magane eka dyave
Kara joditho dina atyanta bhave
Bhavi Mohaniraja ha tari aata.
Namaskara sastanga Sri Sainatha.

    </string>
    <string name="madhyana_aarathi_text_10">
        Aisa yei Ba. Sai Digambara. Akshayarupa Avatara Sarvahi
vyapaka tu. Sruti Sara, Anusaya-trikumara Aisa yei ba
Kasi Snana Japa, prathidivasi. Kohlapura bhiksesi Nirmala
nadi tunga, jala prasi, Nidra mahura desi. Aisa yei ba
Zoli lombatase vama kari. Trisula damaru-dhari
Bhaktan varada sada sukhakari Deshila Mukti cari Aisa yei
ba
Payi paduka japamala kamandalu mrgachala Dharana
karisi Ba
Nagajata muguta sobhato matha. Aisa yei ba
Tatpara tuzya ya he dhyani. Aksaya tyanche sadani
Lakshmi vasakari dinarajani. Raksisi sankata varuni Aisa
yei ba
Ya pari dhyana tuze Gururaya drsya kari nayanan ya
Purnanandha sukhe hi kaya. Lavisi hariguna gaya.
Aisa yei Ba. Sai Digambara. Akshayarupa Avatara Sarvahi
vyapaka tu.
Sruti Sara, Anusaya-trikumara Aisa yei ba
    </string>
    <string name="madhyana_aarathi_text_11">
        Sada satsavarupam cidananda kandam
jagatsambhavasthana samhara he tum
        Svabhaktecchaya manusam darsyamtam, namamisvaram
sadgurum sainatham.
Bhavadhvantavidvamsa martandamidayam
manovaggatitam munirdhyanagamyam
Jagat-vyapakam nirmalam nirgunam tvam, namamisvaram
sadgurum sainatham.
Bhavbambhodhi magnarditanam jananam, svapadasritanam
svabhaktipriyanam
Samudharanartha kalau sambhavantam, namamisvaram
sadgurum sainatham.
Sada nimbavrksasya muladhivasat sudhastravinam titka
mapya priyam tam
Tarun kalpavrksadhikam sadhayantam, namamisvaram
sadgurum sainatham.
Sada kalpavrksasya tasyadhimule bhavedbhavabuddhaya
saparyadhisevaam
Nrnam kurvathaam bhuktimukti ptadam tam,
namamisvaram sadgurum sainatham.
Anekasruta tarkya lilavilasaih, samaviskrtesana
bhasvatprabhavam
Ahambhavahinam prasannatmabhavam, namamisvaram
sadgurum sainatham.
Satam visrama rama mevabhiramam, sada sajjanaih
Sanstutam sannamaddhih,
Janamodadam bhaktabhadra-pradham tam,
namamisvaram sadgurum sainatham.
Ajanmadhyamekham param brahma saksat svayam
sambhavam ramameva vathirnam
Bhavadarsanatsam Punitah praboham, namamisvaram
sadgurum sainatham.
Sri Saisa Krpanidhe khiladrnam sarvarthasiddhiprad
        Yusmatpadarajah prabhavamatulam dhatapivakta
kshamah
Sadbhaktya saranam krtanjaliputah samprapito-smi
Prabho,
Srimat Sau paresapada-kamalannanyaccharanyam
mama.
Sairupadhara Raghavottamam bhakta kama vibhudha
dhrumam Prabhum.
Mayayopahatacitta suddhaye, cintaya myahamaharnisammuda.
Saratsudhamsu pratima-prakasham, kripatapatram tava
sainatha
Tvadhiyapadabja samsritanam svacchayay
tapamapakarotu.
        Upasanadaivata Sainatha, stavair mayopasanina
stutastvam
Ramenmano me tava padayugme, bhrngo, yathabje
makarandalubdhah.
Anekajanmarjita papasankshyo, bhavedhbhavatpada
saroja darsanat
Ksamsva sarvana paradha punjakan prasida Saisa Guro
dayanidhe.
Sri Sainatha caranamrta puta cittastatpada sevanaratah
satatam ca bhaktya
Sansara janya duritau dhavinir gathaste kaivalyadhama
paramam samavapnuvanti.
Stotrametatpathedbhaktya yo narastanmanah sada
Sadguru Sainathasya krpa patram bhaved dhruvam.
Sainatha krpa sarvadrusatpadya kusumavalih
Sreyase ca manah sudhyai premasutrena gumfita.
Govindasuriputrena Kasinathabhidhayina
Upasanityupakhyena Sri Sai Gurave’ rpita.
    </string>
    <string name="madhyana_aarathi_text_12">
        Karacharanakrtam vakkayajam karmajam va
Sravananayanajam va manasam va’ paradham
Viditamaviditam va sarvametatksamasva.
Jaya Jaya karunabdhe Sri Prabho Sainatha
    </string>
    <string name="madhyana_aarathi_text_13">
        Sri sacchidananda sadguru
Sainatha maharaja ki Jai.
Aum Rajadhiraja Yogiraja
Parabrahma Sainatha Maharaja
Sri sacchidananda sadguru
Sainatha maharaja ki Jai.
    </string>
</resources>